WIP new analysis function can now skip segmentation and/or measurement, useful for benchmarking.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
@@ -131,7 +131,8 @@
     "# nd2_filenames = ['/home/jqs1/scratch/fidelity/180518_triplegrowthcurve/PHASE_GC001.nd2', '/home/jqs1/scratch/fidelity/180518_triplegrowthcurve/PHASE_GC002.nd2']\n",
     "# nd2_filenames = glob('/n/scratch2/jqs1/fidelity/all/180405*.nd2') + glob('/n/scratch2/jqs1/fidelity/all/TrErr*.nd2')\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr001.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2'] + glob('/n/scratch2/jqs1/fidelity/all/TrErr*.nd2')\n",
-    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/TrErr.nd2\"]\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/TrErr.nd2']\n",
+    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe32.64m.nd2\"]\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2']"
    ]
   },
@@ -206,10 +207,11 @@
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=[\n",
     "        'export PYTHONPATH=\"/home/jqs1/projects/matriarch\"',\n",
-    "        #'export PYTHONTRACEMALLOC=25',\n",
+    "        \"export PYTHONTRACEMALLOC=25\",\n",
     "        #'export MALLOC_CONF=prof:true,prof_leak:true,lg_prof_interval:31,prof_final:true',\n",
+    "        'export LD_PRELOAD=\"/home/jqs1/lib/libjemalloc.so.2\"',\n",
     "    ],\n",
-    ")  #'export LD_PRELOAD=\"/home/jqs1/lib/libjemalloc.so.2\"'])\n",
+    ")\n",
     "client = Client(cluster)  # , direct_to_workers=True)"
    ]
   },
@@ -219,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(400)"
+    "cluster.scale(40)"
    ]
   },
   {
@@ -335,9 +337,54 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_frames = all_frames.loc[\n",
-    "    IDX[\"/n/scratch2/jqs1/fidelity/all/TrErr.nd2\", :, :, :], :\n",
-    "]"
+    "selected_frames = all_frames.loc[IDX[:, :40, :, :10], :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "trenches = _get_trench_bboxes(*selected_frames.index[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trenches.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "res = measure(trenches, selected_frames, measurement_func=_measurement_func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(res).keys()  # ['images'].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.get_one(res)[\"measurements\"][\"trenchwise\"]"
    ]
   },
   {
@@ -365,11 +412,14 @@
     "\n",
     "\n",
     "def _measurement_func(label_image, intensity_image):\n",
-    "    eroded_label_image = (\n",
-    "        util.repeat_apply(skimage.morphology.binary_erosion, 2)(label_image != 0)\n",
-    "        * label_image\n",
-    "    )\n",
+    "    if label_image is not None:\n",
+    "        eroded_label_image = (\n",
+    "            util.repeat_apply(skimage.morphology.binary_erosion, 2)(label_image != 0)\n",
+    "            * label_image\n",
+    "        )\n",
     "    if intensity_image is None:\n",
+    "        if label_image is None:\n",
+    "            return None  # can't measure anything\n",
     "        minlength = label_image.max() + 1\n",
     "        mask_labelwise_df = pd.DataFrame(\n",
     "            {\n",
@@ -381,6 +431,10 @@
     "        )\n",
     "        mask_labelwise_df.index.name = \"label\"\n",
     "        return dict(mask_labelwise=mask_labelwise_df)\n",
+    "    trenchwise_df = workflow.map_frame(trenchwise_funcs, intensity_image)\n",
+    "    res = dict(trenchwise=trenchwise_df)\n",
+    "    if label_image is None:\n",
+    "        return res  # only measure trenchwise\n",
     "    labelwise = {\n",
     "        \"noerode\": workflow.map_frame_over_labels(\n",
     "            pixelwise_funcs, label_image, intensity_image\n",
@@ -389,9 +443,9 @@
     "            pixelwise_funcs, eroded_label_image, intensity_image\n",
     "        ),\n",
     "    }\n",
-    "    trenchwise_df = workflow.map_frame(trenchwise_funcs, intensity_image)\n",
     "    labelwise_df = pd.concat(labelwise, axis=1)\n",
-    "    return dict(trenchwise=trenchwise_df, labelwise=labelwise_df)"
+    "    res[\"labelwise\"] = labelwise_df\n",
+    "    return res  # measure trenchwise and labelwise"
    ]
   },
   {
@@ -431,6 +485,7 @@
     "        for k, v in util.flatten_dict(trench_crops).items()\n",
     "        if k[0] != \"_frame\"\n",
     "    }\n",
+    "    res = {}\n",
     "    segmentation_masks = {}\n",
     "    measurements = {}\n",
     "    # segment\n",
@@ -439,50 +494,58 @@
     "            continue\n",
     "        segmentation_key = (trench_set, trench_idx, segmentation_channel, t)\n",
     "        segmentation_mask = segmentation_masks.get(segmentation_key, None)\n",
-    "        if segmentation_mask is None:\n",
-    "            segmentation_masks[segmentation_key] = segmentation_func(\n",
-    "                flattened_crops[segmentation_key]\n",
-    "            )\n",
+    "        if segmentation_mask is None and segmentation_func is not None:\n",
+    "            segmentation_mask = segmentation_func(flattened_crops[segmentation_key])\n",
+    "            segmentation_masks[segmentation_key] = segmentation_mask\n",
     "            # measure mask\n",
-    "            measurements[(\"mask\", (trench_set, trench_idx, t))] = measurement_func(\n",
-    "                segmentation_masks[segmentation_key], None\n",
-    "            )\n",
+    "            if measurement_func is not None:\n",
+    "                measurements[(\"mask\", (trench_set, trench_idx, t))] = measurement_func(\n",
+    "                    segmentation_mask, None\n",
+    "                )\n",
     "        # measure\n",
-    "        measurements[(channel, (trench_set, trench_idx, t))] = measurement_func(\n",
-    "            segmentation_masks[segmentation_key], crop\n",
+    "        if measurement_func is not None:\n",
+    "            measurements[(channel, (trench_set, trench_idx, t))] = measurement_func(\n",
+    "                segmentation_mask, crop\n",
+    "            )\n",
+    "    if measurement_func is not None:\n",
+    "        measurement_dfs = util.map_dict_levels(\n",
+    "            lambda k: (k[1], k[0], *k[2:]), measurements\n",
     "        )\n",
-    "    measurement_dfs = util.map_dict_levels(lambda k: (k[1], k[0], *k[2:]), measurements)\n",
-    "    for name, dfs in measurement_dfs.items():\n",
-    "        dfs = util.unflatten_dict(dfs)\n",
-    "        if isinstance(util.get_one(dfs, level=2), pd.Series):\n",
-    "            df = pd.concat(\n",
-    "                {\n",
-    "                    channel: pd.concat(channel_dfs, axis=1).T\n",
-    "                    for channel, channel_dfs in dfs.items()\n",
-    "                },\n",
-    "                axis=1,\n",
-    "            )\n",
-    "        else:\n",
-    "            df = pd.concat(\n",
-    "                {\n",
-    "                    channel: pd.concat(channel_dfs, axis=0)\n",
-    "                    for channel, channel_dfs in dfs.items()\n",
-    "                },\n",
-    "                axis=1,\n",
-    "            )\n",
-    "        df.index.names = [\"trench_set\", \"trench\", \"t\", *df.index.names[3:]]\n",
-    "        measurement_dfs[name] = df\n",
-    "    images = dict(\n",
-    "        raw=trench_crops, segmentation=util.unflatten_dict(segmentation_masks)\n",
-    "    )\n",
-    "    return dict(measurements=measurement_dfs, images=images)\n",
+    "        for name, dfs in measurement_dfs.items():\n",
+    "            dfs = util.unflatten_dict(dfs)\n",
+    "            if isinstance(util.get_one(dfs, level=2), pd.Series):\n",
+    "                df = pd.concat(\n",
+    "                    {\n",
+    "                        channel: pd.concat(channel_dfs, axis=1).T\n",
+    "                        for channel, channel_dfs in dfs.items()\n",
+    "                    },\n",
+    "                    axis=1,\n",
+    "                )\n",
+    "            else:\n",
+    "                df = pd.concat(\n",
+    "                    {\n",
+    "                        channel: pd.concat(channel_dfs, axis=0)\n",
+    "                        for channel, channel_dfs in dfs.items()\n",
+    "                    },\n",
+    "                    axis=1,\n",
+    "                )\n",
+    "            df.index.names = [\"trench_set\", \"trench\", \"t\", *df.index.names[3:]]\n",
+    "            measurement_dfs[name] = df\n",
+    "        res[\"measurements\"] = measurement_dfs\n",
+    "    images = dict(raw=trench_crops)\n",
+    "    if segmentation_func is not None:\n",
+    "        images[\"segmentation\"] = util.unflatten_dict(segmentation_masks)\n",
+    "    res[\"images\"] = images\n",
+    "    return res\n",
     "\n",
     "\n",
     "measure = processing.iterate_over_groupby([\"filename\", \"position\"])(_measure)\n",
     "\n",
     "\n",
-    "def _measure_and_write(trenches, frames, return_none=True, write=True):\n",
-    "    res = measure(trenches, frames, measurement_func=_measurement_func)\n",
+    "def _measure_and_write(\n",
+    "    trenches, frames, measurement_func=None, return_none=True, write=True\n",
+    "):\n",
+    "    res = measure(trenches, frames, measurement_func=measurement_func)\n",
     "    if write:\n",
     "        processing.write_images_and_measurements(\n",
     "            res, filename_func=filename_func, dataframe_format=\"parquet\"\n",
@@ -584,8 +647,8 @@
     "\n",
     "for filename, filename_frames in selected_frames.groupby(\"filename\"):\n",
     "    trenches_futures = {}\n",
-    "    trench_errs = {}  # TODO!!!\n",
-    "    analysis_futures = {}\n",
+    "    # trench_errs = {} # TODO!!!\n",
+    "    # analysis_futures = {}\n",
     "    for position, frames in filename_frames.groupby(\"position\"):\n",
     "        key = (filename, position)\n",
     "        frame_to_segment = frames.loc[IDX[:, :, [\"MCHERRY\"], 0], :]\n",
@@ -593,15 +656,20 @@
     "            _get_trench_bboxes, *frame_to_segment.index[0], priority=10\n",
     "        )\n",
     "        trenches_futures[key] = trenches_future\n",
-    "        all_trenches_futures[key] = trenches_futures[key]\n",
+    "        # all_trenches_futures[key] = trenches_futures[key]\n",
     "        filtered_trenches_future = client.submit(filter_trenches, trenches_future)\n",
     "        analysis_future = client.submit(\n",
-    "            partial(_measure_and_write, return_none=True, write=False),\n",
+    "            partial(\n",
+    "                _measure_and_write,\n",
+    "                measurement_func=_measurement_func,\n",
+    "                return_none=True,\n",
+    "                write=False,\n",
+    "            ),\n",
     "            filtered_trenches_future,\n",
     "            frames,\n",
     "        )\n",
-    "        analysis_futures[key] = analysis_future\n",
-    "        all_analysis_futures[key] = analysis_futures[key]\n",
+    "        # analysis_futures[key] = analysis_future\n",
+    "        all_analysis_futures[key] = analysis_future\n",
     "    # save trenches\n",
     "    trenches_filename = filename_func(\n",
     "        kind=\"trenches\", extension=\"parquet\", filename=filename\n",
@@ -610,6 +678,56 @@
     "        save_trenches, list(trenches_futures.values()), trenches_filename, priority=10\n",
     "    )\n",
     "# OPTIONALLY: stream analysis to master"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Memory profiling 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_snapshot():\n",
+    "    import tracemalloc\n",
+    "\n",
+    "    return tracemalloc.take_snapshot()\n",
+    "\n",
+    "\n",
+    "snaps = client.run(get_snapshot)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot = util.get_one(snaps)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "snapshot2 = list(reversed(sorted(snapshot.statistics(\"lineno\"), key=lambda x: x.size)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for stat in snapshot2[:10]:\n",
+    "    print(stat)"
    ]
   },
   {
