--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
@@ -132,8 +132,10 @@
     "# nd2_filenames = glob('/n/scratch2/jqs1/fidelity/all/180405*.nd2') + glob('/n/scratch2/jqs1/fidelity/all/TrErr*.nd2')\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr001.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly.nd2', '/n/scratch2/jqs1/fidelity/all/180405_txnerr_loweronly_fast.nd2'] + glob('/n/scratch2/jqs1/fidelity/all/TrErr*.nd2')\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/TrErr.nd2']\n",
-    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe32.64m.nd2\"]\n",
-    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2']"
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2']\n",
+    "\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe32.64m.nd2']\n",
+    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2\"]"
    ]
   },
   {
@@ -337,7 +339,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "selected_frames = all_frames.loc[IDX[:, :40, :, :10], :]"
+    "selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key = selected_frames.index[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "key2 = (\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2\", 271, \"MCHERRY\", 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(workflow.get_nd2_frame(*key2))"
    ]
   },
   {
@@ -347,7 +383,7 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "trenches = _get_trench_bboxes(*selected_frames.index[0])"
+    "trenches = _get_trench_bboxes(*key2)"
    ]
   },
   {
@@ -542,10 +578,8 @@
     "measure = processing.iterate_over_groupby([\"filename\", \"position\"])(_measure)\n",
     "\n",
     "\n",
-    "def _measure_and_write(\n",
-    "    trenches, frames, measurement_func=None, return_none=True, write=True\n",
-    "):\n",
-    "    res = measure(trenches, frames, measurement_func=measurement_func)\n",
+    "def _measure_and_write(trenches, frames, return_none=True, write=True, **kwargs):\n",
+    "    res = measure(trenches, frames, **kwargs)\n",
     "    if write:\n",
     "        processing.write_images_and_measurements(\n",
     "            res, filename_func=filename_func, dataframe_format=\"parquet\"\n",
@@ -578,7 +612,9 @@
    "outputs": [],
    "source": [
     "def trench_diag_to_dataframe(trench_diag, sep=\".\"):\n",
+    "    print(\"initial trench_diag\", trench_diag)\n",
     "    df = diagnostics.expand_diagnostics_by_label(trench_diag.to_frame().T)\n",
+    "    print(\"df>\", df)\n",
     "    df.index = df.index.droplevel(0)\n",
     "    df.index.names = [*df.index.names[:-1], \"trench_set\"]\n",
     "    return df\n",
@@ -586,7 +622,10 @@
     "\n",
     "def trench_info_to_dataframe(trench_info):\n",
     "    trench_points, trench_diag, trench_err = trench_info\n",
+    "    print(\"trench points>\", trench_points)\n",
+    "    print(\"trench_err>\", trench_err)\n",
     "    trench_diag = trench_diag_to_dataframe(trench_info[1])\n",
+    "    print(\"diag\", trench_diag)\n",
     "    # FROM: https://stackoverflow.com/questions/14744068/prepend-a-level-to-a-pandas-multiindex\n",
     "    trench_diag = pd.concat([trench_diag], axis=1, keys=[\"diag\"])\n",
     "    trenches = pd.concat(\n",
@@ -656,12 +695,14 @@
     "            _get_trench_bboxes, *frame_to_segment.index[0], priority=10\n",
     "        )\n",
     "        trenches_futures[key] = trenches_future\n",
-    "        # all_trenches_futures[key] = trenches_futures[key]\n",
+    "        all_trenches_futures[key] = trenches_futures[key]\n",
     "        filtered_trenches_future = client.submit(filter_trenches, trenches_future)\n",
     "        analysis_future = client.submit(\n",
     "            partial(\n",
     "                _measure_and_write,\n",
-    "                measurement_func=_measurement_func,\n",
+    "                # measurement_func=_measurement_func,\n",
+    "                measurement_func=None,\n",
+    "                segmentation_func=None,\n",
     "                return_none=True,\n",
     "                write=False,\n",
     "            ),\n",
@@ -839,6 +880,17 @@
    "outputs": [],
    "source": [
     "util.get_one(all_analysis_futures).result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "util.apply_map_futures(\n",
+    "    list, all_analysis_futures, predicate=lambda x: x.status == \"error\"\n",
+    ")"
    ]
   },
   {
