WIP pipeline gracefully handles trench detection failures, but does not write errors to disk.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
@@ -373,6 +373,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plt.figure(figsize=(20,20))\n",
     "plt.imshow(workflow.get_nd2_frame(*key2))"
    ]
   },
@@ -579,6 +580,8 @@
     "\n",
     "\n",
     "def _measure_and_write(trenches, frames, return_none=True, write=True, **kwargs):\n",
+    "    if trenches is None:\n",
+    "        return None\n",
     "    res = measure(trenches, frames, **kwargs)\n",
     "    if write:\n",
     "        processing.write_images_and_measurements(\n",
@@ -612,20 +615,28 @@
    "outputs": [],
    "source": [
     "def trench_diag_to_dataframe(trench_diag, sep=\".\"):\n",
-    "    print(\"initial trench_diag\", trench_diag)\n",
-    "    df = diagnostics.expand_diagnostics_by_label(trench_diag.to_frame().T)\n",
-    "    print(\"df>\", df)\n",
-    "    df.index = df.index.droplevel(0)\n",
-    "    df.index.names = [*df.index.names[:-1], \"trench_set\"]\n",
-    "    return df\n",
+    "    df = trench_diag.to_frame().T\n",
+    "    expanded_df = diagnostics.expand_diagnostics_by_label(df)\n",
+    "    expanded_df.index = expanded_df.index.droplevel(0)\n",
+    "    expanded_df.index.names = [*expanded_df.index.names[:-1], \"trench_set\"]\n",
+    "    return expanded_df\n",
+    "\n",
+    "\n",
+    "#     if len(expanded_df):\n",
+    "#         expanded_df.index = expanded_df.index.droplevel(0)\n",
+    "#         expanded_df.index.names = [*expanded_df.index.names[:-1], 'trench_set']\n",
+    "#     else:\n",
+    "#         expanded_df = pd.concat([df], keys=[-1], names=['trench_set'])\n",
+    "#     return expanded_df\n",
     "\n",
     "\n",
     "def trench_info_to_dataframe(trench_info):\n",
     "    trench_points, trench_diag, trench_err = trench_info\n",
-    "    print(\"trench points>\", trench_points)\n",
-    "    print(\"trench_err>\", trench_err)\n",
+    "    if trench_err is not None:\n",
+    "        # TODO: write trench_err\n",
+    "        return None\n",
     "    trench_diag = trench_diag_to_dataframe(trench_info[1])\n",
-    "    print(\"diag\", trench_diag)\n",
+    "    display(trench_diag)\n",
     "    # FROM: https://stackoverflow.com/questions/14744068/prepend-a-level-to-a-pandas-multiindex\n",
     "    trench_diag = pd.concat([trench_diag], axis=1, keys=[\"diag\"])\n",
     "    trenches = pd.concat(\n",
@@ -649,12 +660,16 @@
     "    frame = workflow.get_nd2_frame(*key)\n",
     "    trench_info = find_trenches_diag(frame)\n",
     "    df = trench_info_to_dataframe(trench_info)\n",
+    "    if df is None:\n",
+    "        return None\n",
     "    trenches = pd.concat([df], names=[\"filename\", \"position\"], keys=[key[:2]])\n",
     "    trench_bboxes = trenches_to_bboxes(trenches, image_limits=image_limits)\n",
     "    return trench_bboxes\n",
     "\n",
     "\n",
     "def filter_trenches(trenches):\n",
+    "    if trenches is None:\n",
+    "        return None\n",
     "    good_trenches = trenches[\n",
     "        (\n",
     "            (trenches[(\"diag\", \"find_trench_lines.hough_2.peak_func.pitch\")] - 24).abs()\n",
@@ -671,6 +686,15 @@
     "        output_filename, trenches, merge=False, overwrite=overwrite\n",
     "    )\n",
     "    return trenches"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client._cancel??"
    ]
   },
   {
