Recompiled numcodecs without AVX2 support, stopped getting dask workers dying to SIGILL. First full test of pipeline worked successfully.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181019 Burst analysis.ipynb
@@ -134,8 +134,13 @@
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/TrErr.nd2']\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.nd2']\n",
     "\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe8.16m.nd2']\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2']\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe8.64m.nd2']\n",
+    "\n",
     "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe32.64m.nd2']\n",
-    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/180405_txnerr002.stripe1.nd2\"]"
+    "nd2_filenames = [\"/n/scratch2/jqs1/fidelity/all/TrErr.nd2\"]\n",
+    "# nd2_filenames = ['/n/scratch2/jqs1/fidelity/all/180928_txnerr_bigsnake.stripe-1.256m.nd2']"
    ]
   },
   {
@@ -209,7 +214,7 @@
     "    # diagnostics_port=('127.0.0.1', 8787),\n",
     "    env_extra=[\n",
     "        'export PYTHONPATH=\"/home/jqs1/projects/matriarch\"',\n",
-    "        \"export PYTHONTRACEMALLOC=25\",\n",
+    "        #'export PYTHONTRACEMALLOC=25',\n",
     "        #'export MALLOC_CONF=prof:true,prof_leak:true,lg_prof_interval:31,prof_final:true',\n",
     "        'export LD_PRELOAD=\"/home/jqs1/lib/libjemalloc.so.2\"',\n",
     "    ],\n",
@@ -223,7 +228,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cluster.scale(40)"
+    "cluster.scale(200)"
    ]
   },
   {
@@ -428,6 +433,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Data reduction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# selected_frames = all_frames.loc[IDX[:,:100,:,:20],:]\n",
+    "selected_frames = all_frames.loc[IDX[:, :, :, :], :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## New trench detection+segmentation+analysis"
    ]
   },
@@ -585,7 +607,11 @@
     "    res = measure(trenches, frames, **kwargs)\n",
     "    if write:\n",
     "        processing.write_images_and_measurements(\n",
-    "            res, filename_func=filename_func, dataframe_format=\"parquet\"\n",
+    "            res,\n",
+    "            filename_func=filename_func,\n",
+    "            dataframe_format=\"parquet\",\n",
+    "            write_images=True,\n",
+    "            write_measurements=True,\n",
     "        )\n",
     "    if return_none:\n",
     "        return None\n",
@@ -636,7 +662,6 @@
     "        # TODO: write trench_err\n",
     "        return None\n",
     "    trench_diag = trench_diag_to_dataframe(trench_info[1])\n",
-    "    display(trench_diag)\n",
     "    # FROM: https://stackoverflow.com/questions/14744068/prepend-a-level-to-a-pandas-multiindex\n",
     "    trench_diag = pd.concat([trench_diag], axis=1, keys=[\"diag\"])\n",
     "    trenches = pd.concat(\n",
@@ -694,15 +719,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client._cancel??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_trenches_futures = {}\n",
     "all_trench_errs = {}\n",
     "all_analysis_futures = {}\n",
@@ -724,11 +740,11 @@
     "        analysis_future = client.submit(\n",
     "            partial(\n",
     "                _measure_and_write,\n",
-    "                # measurement_func=_measurement_func,\n",
-    "                measurement_func=None,\n",
-    "                segmentation_func=None,\n",
+    "                measurement_func=_measurement_func,\n",
+    "                # measurement_func=None,\n",
+    "                # segmentation_func=None,\n",
     "                return_none=True,\n",
-    "                write=False,\n",
+    "                write=True,\n",
     "            ),\n",
     "            filtered_trenches_future,\n",
     "            frames,\n",
@@ -743,6 +759,22 @@
     "        save_trenches, list(trenches_futures.values()), trenches_filename, priority=10\n",
     "    )\n",
     "# OPTIONALLY: stream analysis to master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client.restart()"
    ]
   },
   {
