WIP large image zarrs is due to occasional trench finding errors that lead to huge bboxes.

--- a/paulssonlab/src/paulssonlab/shenker/matriarch/181022 Burst analysis.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/matriarch/181022 Burst analysis.ipynb
@@ -1480,7 +1480,7 @@
    "outputs": [],
    "source": [
     "d = zarr.DictStore()\n",
-    "# dict_root = zarr.open_group(store=d)"
+    "dict_root = zarr.open_group(store=d)"
    ]
   },
   {
@@ -1490,7 +1490,113 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "zarr.copy_store(ims._store, d, if_exists=\"raise\")"
+    "# zarr.copy_store(ims._store, d, if_exists='raise')\n",
+    "zarr.copy(ims, dict_root, name=\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import reduce\n",
+    "import operator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_nbytes = 0\n",
+    "total_nbytes_stored = 0\n",
+    "total_pixels = 0\n",
+    "all_pixels = []\n",
+    "\n",
+    "\n",
+    "def func(name, x):\n",
+    "    if name.startswith(\"_frame\"):\n",
+    "        return\n",
+    "    global total_nbytes, total_nbytes_stored, total_pixels\n",
+    "    if isinstance(x, zarr.Array):\n",
+    "        total_nbytes += x.nbytes\n",
+    "        total_nbytes_stored += x.nbytes_stored\n",
+    "        pixels = reduce(operator.mul, x.shape, 1)\n",
+    "        total_pixels += pixels\n",
+    "        all_pixels.append(pixels)\n",
+    "\n",
+    "\n",
+    "dict_root[\"raw\"].visititems(func)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(\n",
+    "    total_nbytes,\n",
+    "    total_nbytes_stored,\n",
+    "    total_nbytes / total_nbytes_stored,\n",
+    "    total_pixels * 2,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(all_pixels, bins=100, log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_pixels / ((2048**2) * 66 * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "((2048**2) * 1404 * 66 * 2 * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(dict_root[\"raw/(1, 0)/MCHERRY\"][:, :, 0].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(dict_root[\"raw/(1, 1)/MCHERRY\"][:, :, 0].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_root[\"raw/(1, 0)/MCHERRY\"].info"
    ]
   },
   {
